tests/codegen/fail/enum/derive_no_variants.stderr
error: GraphQL enum expected at least 1 non-ignored variant
 --> fail/enum/derive_no_variants.rs:1:10
  |
1 | #[derive(juniper::GraphQLEnum)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `juniper::GraphQLEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
